# minecraft-updater

./: .gitignore  README.md  cosmic-ray.sqlite  example.config.yaml  geyser_build_cache.json  geyser_floodgate_build_cache.json  main.py  paper_build_cache.json  pyproject.toml  tox.ini
src/: exceptions.py  geyser_downloader.py  geyser_floodgate_downloader.py  geysermc_downloader.py  main.py  paper_downloader.py  spigotmc_downloader.py  viaversion_downloader.py
src/downloader/: file_downloader.py  geyser_downloader.py  geyser_floodgate_downloader.py  geysermc_downloader.py  paper_downloader.py  server_downloader.py
src/downloader/paper_version_strategies/: latest_version_strategy.py  stable_version_strategy.py  version_fetch_strategy.py
src/downloader/paper_version_strategy/: latest_version_strategy.py  paper_version_strategy_factory.py  specific_version_strategy.py  stable_version_strategy.py  version_fetch_strategy.py
src/downloaders/: geyser_downloader.py  geyser_floodgate_downloader.py  geysermc_downloader.py  paper_downloader.py  spigotmc_downloader.py  viaversion_downloader.py
src/manager/: backup_manager.py  cache_manager.py  config_manager.py  file_manager.py  server_manager.py
src/minecraft_updater/: geyser_downloader.py  geyser_floodgate_downloader.py  main.py  paper_downloader.py  spigotmc_downloader.py  viaversion_downloader.py
src/updater/: file_manager.py
src/utilities/: api_client.py  download_utils.py  paper_api.py
tests/: test_main.py
tests/downloader/paper_version_strategy/: test_latest_version_strategy.py  (+4 more)
